<resources>
    <string name="app_name">instalogin</string>
    <string name="login">Login</string>
    <string name="create_account">Create an Account</string>
    <string name="email_address">E-mail address</string>
    <string name="password">Password</string>
    <string name="login_now">Login Now</string>
    <string name="sign_up">Sign Up</string>
    <string name="select_username">Select an username</string>
    <string name="don_t_remember_password">Don\'t remember password?</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="have_account_already">Have an account already?</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="or">or</string>

</resources>